reconcile https://github.com/eclipse-jdt/eclipse.jdt.core/pull/3487 with https://github.com/eclipse-jdt/eclipse.jdt.core/pull/3586 regarding @Deprecated(since="18")
Improve splitting of string command line